# Diplom_PY64_Vlad_Golovchenko

./: README.md  pyproject.toml
home_accounting/: .dockerignore  .env  Dockerfile  docker-compose.yml  requirements.txt
home_accounting/apps/core/: __init__.py  apps.py  mixins.py  tests.py  views.py
home_accounting/apps/finance/: __init__.py  admin.py  apps.py  errors.py  forms.py  models.py  serializers.py  services.py  tests.py  urls.py  urls_template.py  utils.py  validators.py  views.py  views_template.py
home_accounting/apps/reports/: apps.py  errors.py  exporters.py  forms.py  models.py  serializers.py  services.py  tasks.py  tests.py  urls.py  utils.py  views.py
home_accounting/apps/users/: __init__.py  admin.py  apps.py  errors.py  forms.py  models.py  permissions.py  serializers.py  services.py  signals.py  tests.py  urls.py  urls_template.py  views.py  views_template.py
home_accounting/config/: __init__.py  celery.py  exceptions_handler.py  logging_config.py  middleware.py  settings.py  urls.py
home_accounting/static/css/: style.css
home_accounting/templates/: base.html
home_accounting/templates/core/: index.html
home_accounting/templates/errors/: 403.html  404.html  500.html
home_accounting/templates/finance/: add_category.html  add_transaction.html  add_wallet.html  category_list.html  dashboard.html  delete_category.html  edit_category.html  transaction_list.html  wallet.html
home_accounting/templates/reports/: report_create.html  report_list.html
home_accounting/templates/users/: login.html  logout.html  profile.html  register.html
(+14 files in other folders)
