[project]
name = "diplom-py64"
version = "0.1.0"
description = "Дипломный проект по Python Домашняя бухгалтерия"
requires-python = ">=3.8,<3.14"
dependencies = [
    "django>=5.2.8",
    "kombu>=5.6.0",
]

[project.authors]
name = "Vladislav Golovchenko"
email = "vlad-head@mail.ru"

[project.license]
name = "MIT"

[project.urls]
homepage = "https://example.com"
repository = "https://github.com/username/repository"
readme = "README.md"
